# ai-doc-organizer

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .maintenance.yml  .pre-commit-config.yaml  .snyk  .yamllint  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.docs  README.md  SETUP.md  config.example.yaml  docker-compose.yml  mkdocs.yml  pyproject.toml  requirements-docs.txt  requirements.txt  ruff.toml  sonar-project.properties  trivy.yaml
.claude/: approver-policy.md  settings.json
.github/: PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/scripts/: check-api-stability.py
.github/workflows/: acceptance.yml  api-stability.yml  claude-approver.yml  codeql-noop.yml  codeql.yml  docs-deploy.yml  docs-publish.yml  docs.yml  gitleaks.yml  quality-public-noop.yml  quality-public.yml  scorecard.yml  template-drift-watch.yml  test.yml
docs/: .noop-verification-2026-06-04.md  index.md
docs/architecture/: c4-container.md  c4-context.md  index.md
docs/explanation/: index.md
docs/how-to/: index.md  use-the-cli.md  use-the-web-ui.md
docs/reference/: index.md
docs/tutorials/: getting-started.md  index.md
scripts/: docs-nav-to-chapters.zsh
src/aido/: __main__.py  _coverage_floor_demo.py  _fspath.py  cli.py  config.py  daemon.py  logging_setup.py  main.py  mutations.py  reindex.py  types.py
tests/: conftest.py  fixtures.py
tests/integration/: test_cli_init.py  test_cli_rebuild_index.py  test_compose_topology.py  test_daemon_lifecycle.py  test_dockerfile.py  test_e2e.py  test_main_entrypoint.py  test_main_extra.py  test_watcher.py  test_webui_detail.py  test_webui_feed.py  test_webui_mutations.py  test_webui_settings.py
tests/manual/: runbook.md
tests/unit/: test_agent_sdk.py  test_alias.py  test_anthropic_api.py  test_classifier_base.py  test_config.py  test_daemon_extra.py  test_factory.py  test_filename.py  test_filing_executor.py  test_fspath.py  test_logging.py  test_mutations.py  test_pdf_extract.py  test_pdf_extract_extra.py  test_pdf_hash.py  (+14 more)
(+38 files in other folders)
