[project]
name = "aido"
version = "0.1.0"
description = "Household document auto-filer for Claude"
requires-python = ">=3.14"
dependencies = [
    "claude-agent-sdk>=0.2.87",
    "anthropic>=0.104.0",
    "pypdf>=6.12.2",
    "watchdog>=6.0.0",
    "flask>=3.0.0",
    "jinja2>=3.1.6",
    "ruamel.yaml>=0.19.0",
    "pytesseract>=0.3.10",
    "pdf2image>=1.17.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
    "pytest-cov>=5.0.0",
    "fpdf2>=2.7.0",
]

[project.scripts]
aido = "aido.cli:main"

[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
aido = [
    "store/schema.sql",
    "webui/templates/*.html",
    "webui/static/*.js",
    "webui/static/*.css",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
